--- a/notebooks/rag-101.ipynb
+++ b/notebooks/rag-101.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hi Bob! How can I assist you today?', response_metadata={'token_usage': {'completion_tokens': 10, 'prompt_tokens': 11, 'total_tokens': 21, 'completion_tokens_details': None, 'prompt_tokens_details': None}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_67802d9a6d', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'protected_material_code': {'filtered': False, 'detected': False}, 'protected_material_text': {'filtered': False, 'detected': False}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run-2b341840-4be6-4e02-9205-88fb666b0711-0', usage_metadata={'input_tokens': 11, 'output_tokens': 10, 'total_tokens': 21})"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.messages import HumanMessage\n",
     "\n",
@@ -46,29 +57,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_community.document_loaders import TextLoader\n",
     "loader = TextLoader(\"/workspace/data/knowledge_base/fruits_and_veggies.txt\")\n",
-    "documents = loader.load()"
+    "documents = loader.load()\n",
+    "# save the uploaded file and save the content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'source': '/workspace/data/knowledge_base/fruits_and_veggies.txt'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "documents[0].metadata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Amanita phalloides has a large and imposing epigeous (above ground) fruiting body (basidiocrap). \n",
+      "A mushroom with a large fruiting body is the Amanita phalloides. Some varieties are all white. \n",
+      "AA. Phalloides, a.k.a Death Cap, is one of the most poisonous of all known mushrooms.\n",
+      "Gala apples are a popular variety known for their sweet flavor and crisp texture. \n",
+      "They have a distinctive reddish-orange skin with yellow striping, making them visually appealing in fruit displays. \n",
+      "Originally developed in New Zealand in the 1930s, they have since become a favorite in many countries and are widely cultivated for consumption. \n",
+      "Their versatility makes them perfect for both eating fresh and using in various culinary dishes.\n",
+      "Radishes are small, root vegetables with a sharp, peppery flavor that can range from mild to spicy. \n",
+      "They are usually round or cylindrical in shape and can come in various colors, including red, white, purple, and black. \n",
+      "Rich in vitamins and minerals, radishes are often consumed raw in salads, but can also be cooked or pickled for different culinary applications. \n",
+      "Their crunchy texture and vibrant color make them a popular addition to dishes, adding both taste and aesthetic appeal.\n"
+     ]
+    }
+   ],
    "source": [
     "print(documents[0].page_content)"
    ]
